--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,10 +1,12 @@
 !!! 5
-%html
+%html{lang: 'en-us'}
   %head
     %title Autotrakr
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
+    %meta{name: 'viewport', content: 'width=device-width, initial-scale=1'}
   %body
+    = render :partial => 'layouts/navbar'
     = yield
 
