--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,3 +1,10 @@
-%h2 Welcome to our site!
+.container
+  .row
+    .col-md-12
+      %h1 Welcome!
 
-%p Something will eventually go here...
+      %p A site for keeping track of your vehicles.
+
+      .session-links
+        :erb
+          <%= link_to 'Sign Up', 'sign_up_url'  %> | <%= link_to 'Login', 'login_url' %>
