add ability for user to register for site

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -6,8 +6,8 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{href: '#'}Autotrakr
+      %a.navbar-brand{href: root_path}Autotrakr
 
     .navbar-right
       = link_to 'Login', '#', class: 'btn btn-sm navbar-btn btn-primary'
-      = link_to 'Sign Up', users_new_path, class: 'btn btn-sm navbar-btn btn-default'
+      = link_to 'Sign Up', new_user_path, class: 'btn btn-sm navbar-btn btn-default'
