add correct login_path to navbar

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,5 +9,5 @@
       %a.navbar-brand{href: root_path}Autotrakr
 
     .navbar-right
-      = link_to 'Login', '#', class: 'btn btn-sm navbar-btn btn-primary'
+      = link_to 'Login', login_path, class: 'btn btn-sm navbar-btn btn-primary'
       = link_to 'Sign Up', new_user_path, class: 'btn btn-sm navbar-btn btn-default'
