--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,8 @@
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1'}
   %body
     = render :partial => 'layouts/navbar'
-    = yield
+    .container
+      .row
+        .col-md-12
+          = yield
 
