--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class='col-md-4'>
+<h1>Edit User Profile</h1>
+  <%= render 'form' %>
+</div>
