add user in navbar with a link to user profile

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,7 +1,7 @@
 %nav.navbar.navbar-inverse
   .container
     .navbar-header
-      %button.navbar-toggle.collapsed{type: 'button', 'aria-expanded': :false, data: {toggle: 'collapse', target: '#bs-example-navbar-collapse-1'}}
+      %button.navbar-toggle.collapsed{type: "button", "aria-expanded": :false, data: {toggle: "collapse", target: "#bs-example-navbar-collapse-1"}}
         %span.sr-only Toggle navigation
         %span.icon-bar
         %span.icon-bar
@@ -10,7 +10,8 @@
 
     .navbar-right
       -if current_user
-        = link_to 'Logout', logout_path, class: 'btn btn-sm navbar-btn btn-primary'
+        %p{class: "navbar-link navbar-text"}= link_to current_user.email, user_path(current_user)
+        = link_to "Logout", logout_path, class: "btn btn-sm navbar-btn btn-primary"
       -else
-        = link_to 'Login', login_path, class: 'btn btn-sm navbar-btn btn-primary'
-        = link_to 'Sign Up', new_user_path, class: 'btn btn-sm navbar-btn btn-default'
+        = link_to "Login", login_path, class: "btn btn-sm navbar-btn btn-primary"
+        = link_to "Sign Up", new_user_path, class: "btn btn-sm navbar-btn btn-default"
