add change password link to user show page and change edit page to only be for changing passwords right now

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,4 @@
 <p>Find me in app/views/users/show.html.erb</p>
 
 <p>My email is: <%= current_user.email %></p>
+<p><%= link_to 'Change Password', edit_user_path(@user) %>
