--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@vehicle) do |f| %>
+<%= form_for([current_user, Vehicle.new(user: current_user)]) do |f| %>
   <% if @vehicle.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@vehicle.errors.count, "error") %> prohibited this vehicle from being saved:</h2>
@@ -47,10 +47,10 @@
     <%= f.label :color %><br>
     <%= f.text_field :color %>
   </div>
-  <div class="field">
+  <!-- <div class="field">
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id %>
-  </div>
+  </div> -->
   <div class="actions">
     <%= f.submit %>
   </div>
