--- a/app/views/vehicles/edit.html.erb
+++ b/app/views/vehicles/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @vehicle %> |
+<%= link_to 'Show', [@vehicle.user, @vehicle] %> |
 <%= link_to 'Back', garage_path %>
