--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -1,4 +1,12 @@
-<!-- <p id="notice"><%= notice %></p> -->
+<p>
+  <strong>Name:</strong>
+  <%= @vehicle.name %>
+</p>
+
+<p>
+  <strong>VIN:</strong>
+  <%= @vehicle.vin %>
+</p>
 
 <p>
   <strong>Year:</strong>
