- Add specs for new odometer readings resources - Remove mileage references from vehicles and add new references   to odometer readings - Update odometer reading controller to properly build instances   associated with a vehicle - Update routes to nest odometer readings under vehicles - Cleanup and fix form for odometer readings - Add new set_date method for building a date object from the params   passed in from the rails date_select field

--- a/app/views/odometer_readings/_form.html.erb
+++ b/app/views/odometer_readings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@odometer_reading) do |f| %>
+<%= form_for([@vehicle.user, @vehicle, @odometer_reading]) do |f| %>
   <% if @odometer_reading.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@odometer_reading.errors.count, "error") %> prohibited this odometer_reading from being saved:</h2>
@@ -17,11 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :entry_date %><br>
-    <%= f.date_select :entry_date %>
-  </div>
-  <div class="field">
-    <%= f.label :vehicle_id %><br>
-    <%= f.text_field :vehicle_id %>
+    <%= f.date_select :entry_date, start_year: 1886, end_year: Date.today.year + 5 %>
   </div>
   <div class="actions">
     <%= f.submit %>
