--- a/app/views/odometer_readings/edit.html.erb
+++ b/app/views/odometer_readings/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @odometer_reading %> |
-<%= link_to 'Back', odometer_readings_path %>
+<%= link_to 'Back', [@vehicle.user, @vehicle] %>
